k8s_files/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: giropops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: giropops-toskao.eastus.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: giropops
          servicePort: 80
        path: /
